@@ -2,6 +2,7 @@ Revision history for Perl extension Util::H2O.
 
 0.18	not yet released
 	- added "o2h" function
+	- added "-pass" option
 
 0.16	Sun, Oct 17 2021	commit 99b3152f5617bfe9bf1b86bc4d4ce798ac21f11c
 	- allowed "-classify" into current package
